# enigma

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/: ArraySoftLight.cs  AutostartNet.cs  BaseMovement.cs  BlinkingLight.shadergraph  BoneAnimator.cs  CityEscape.unity  DashPanel.cs  EffectAnimator.cs  EffectScript.cs  EmeraldMat.mat  EmeraldShader.shadergraph  EnableCursor.cs  EnigmaAnimator.cs  EnigmaRailOld.cs  ExplodeOnContact.cs  FM_Blue.mat  FM_Gold.mat  FM_Red.mat  FM_White.mat  Homing.cs  Homing.unity  HomingAttack.cs  HomingTest.unity  Int.cs  JiggleScript.cs  Jump.cs  LevelSwitcher.cs  Light 1.mat  Light.mat  ModelSwitcher.cs  MovingPlatform.cs  NetButtonScript.cs  NetworkDisable.cs  NetworkTest.unity  New Material.mat  Night.unity  PhyscsTest.unity  PhysicsTest.cs  Player.prefab  PrefabBuilder.unity  (+28 more)
Assets/Box/: BoxMat.physicMaterial  BoxMaterial.mat
Assets/Box/bamboo-wood-semigloss-Unity/: New Material.mat
Assets/DashPanel/: Conveyor.mat
Assets/Levels/: SampleScene.unity  Standard.unity
Assets/Levels/CityEscape/: New Material.mat  cityescape_col.fbx  index.txt  sky
Assets/Levels/EmeraldCoastRemake/: EmeraldCoast.unity  Grass.mat  RockParallax.mat  Sand.mat  map_Sand.mtl  rock.mat
Assets/Levels/GrandPeaks/: Grand-Peaks_Lighting.lighting  GrandPeak.unity  height.raw  map_Background_Far.mtl
Assets/Levels/LinearTest/: LinearTest.unity  Road.mtl
Assets/Levels/MetalHarbor/: MH_col.fbx  MH_vis.fbx  index.txt
Assets/Levels/SA2Test/: AltSkybox.mat  Skybox.mat  Visual.fbx  dak fgrenn.mat  greenmm.mat  index.txt  pink.mat  t_road.mat  tx02.mat  tx03.mat  tx04.mat  tx05.mat  tx06.mat  tx07.mat  tx08.mat  tx10.mat  tx15.mat  tx20.mat  yellow.mat
Assets/Levels/Standard_Profiles/: Global Volume Profile.asset
Assets/Light/: Emission.mat  Emission_Fresnel.mat  Light.prefab  Metal.mat  ProtoSpring.prefab  SpringAnimCont.controller  SpringExtend.anim  SpringIdle.anim  SpringMat.mat  SpringMat.shadergraph
Assets/Nk/Sonic/: Nk.Sonic.Air-Down.anim  Nk.Sonic.Air-Up.anim  Nk.Sonic.Spin.anim  anc_Nk.Sonic.controller  anm_Nk.Sonic.Idle.anim  anm_Nk.Sonic.Run-1.anim  anm_Nk.Sonic.Run-2.anim  mat_Nk.Fur-Sonic.mat  mat_Nk.Sonic-Eye.mat
Assets/Particles/: CameraFizzle.prefab  Heat.mat
Assets/ProBuilder Data/: Default Color Palette.asset
Assets/RailGrindTest/: SplineExtrude_Spline.asset
Assets/RenderTexture/: RTMat.mat  RenderTarget.renderTexture  RenderTexture Shader.shadergraph
Assets/SlopePremade/Prefabs/: Circle.prefab
Assets/Test4_Profiles/: PPV Profile.asset
Assets/UnityStuff/Settings/: SampleSceneProfile.asset  URP-HighFidelity-Renderer.asset  URP-HighFidelity.asset
Assets/UnityStuff/Standard/: GlobalVolumeProfile.asset
Assets/WaterTest/: Voronoi.shadergraph  VoronoiFlatMat.mat  VoronoiMat.mat  Voronoi_Flat.shadergraph  WaterMat.mat  WaterShader.shadergraph
Assets/enigmaFramework/: AnimatorScript2.cs  NetPrefabs.asset  NetworkManager.prefab  mat_BaseMat.mat  shd_EnigmaMaterial.shadergraph
Assets/enigmaFramework/Classes/: PlayerClass.cs
Assets/enigmaFramework/Code/: Buton.cs  CopyTransform.cs  EnigmaCamera.cs  EnigmaPhysics.cs  EnigmaPhysics_Net.cs  EnigmaRail.cs  RailCollider.cs  RailInteraction.cs
Assets/enigmaFramework/DemoStage/: stg_DemoStage.unity
Assets/enigmaFramework/Effects/: Ball.fbx  BallArmature_Ball_Spin.anim  BallArmature_Ball_Spindash.anim  BallEffect.mat  Ball_Animator.controller  Ball_Shader.shadergraph  HeatHaze.shader  New Material.mat
Assets/enigmaFramework/Fonts/: NewRodin Pro EB.asset
Assets/enigmaFramework/GM/: Skybox.mat  gm_construct.lighting  gm_construct.mtl  gm_construct.usdc  painted.tga
Assets/enigmaFramework/Materials/: 1Meter.mat  Asphalt.mat  (+31 more)
Binaries/: ALL_BUILD.vcxproj  Enigma.sln  Enigma.vcxproj  Enigma.vcxproj.filters  EnigmaEditor.vcxproj  EnigmaEditor.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters
Binaries/Debug/: glad.lib
Binaries/Release/: glad.lib
Docs/: LooseIdeas.txt
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Source/Editor/: main.cpp
Source/Runtime/: main.cpp
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt  default-2022.dwlt
(+373 files in other folders)
